# Software-Engineering-Lab-Project-Geometry2D-

./: README.md
Geometry2D/: CMakeLists.txt
Geometry2D/cmake/: CodeCoverage.cmake
Geometry2D/geometry2d/: CMakeLists.txt
Geometry2D/geometry2d/include/: angle.h  line.h  point.h
Geometry2D/geometry2d/src/: angle.cpp  geo_compare.cpp  line.cpp  point.cpp
Geometry2D/test/: angle_test.cpp  compare_test.cpp  geo_compare_test.cpp  line_test.cpp  point_test.cpp  pose_test.cpp
Geometry2D/util/: CMakeLists.txt
